2014-07-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* com16bit.ch: Add a function get_nullstr.

2014-01-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	TeX tuneup of 2014.
	* com16bit.ch, eobase.ch, eoext.ch, eover.ch, omstr.ch,
	om16bit.ch: Adapt to TeX Version 3.14159265.

2014-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* com16bit.ch, comsrcspec.ch: Write dump_name to the terminal.

2014-01-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* com16bit.ch.ch: Restore the word `preloaded' for
	format_idents (as in ../tex.ch).

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* alephbis.c: Include "alephd.h" before system headers.

2013-04-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* alephextra.h, eover.ch: 0.0-rc4 ---> 0.1 for TL 2013.

2012-12-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/aleph.am: Enable silent rules.

2012-12-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* om16bit.ch: fix a delcode bug.

2012-11-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/aleph.am: Define al_tangle and use it instead of o_tangle.

2012-10-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* aleph.c ({allocate,undump}{font,ocp}table): Correctly specify
	the new size for xrealloc().  Remove useless casts.
	({allocate,{un,}dump}fontsorttable): Drop unused functions.
	* omocp.ch: Fix the logic of read_ocp_info().
	Check for ocp table overflow.
	Avoid segmentation fault (uninitialized use of 'f').

2012-07-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* alephextra.c: Must #define DLLPROC before reading alephd.h.

2012-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* alephextra.c [W32TeX]: #define DLLPROC for aleph.dll.

2012-06-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* om16bit.ch: Aleph uses 256 math font families.

2012-04-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* eobase.ch: Fixed a typo in TeX text (for e-TeX).

2012-02-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* com16bit.ch: Remove test for end-of-file after undump.
