@@ -1,3 +1,8 @@
+2014-12-15  Karl Berry  <karl@tug.org>
+
+	* alephbis.c (runexternalocp): quote arguments to system()
+	and check string values. Untested, sorry to say.
+
 2014-07-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* com16bit.ch: Add a function get_nullstr.
